feat: add personal BookDrop inboxes under each user's library tree.
Non-admins upload and review only /books/_users/{id}/bookdrop while admins keep the global /bookdrop mount; owner_user_id scopes queues and finalize targets assigned libraries.